@@ -3,6 +3,7 @@ version 0.7
 	Updated documentation, Added more examples for new utilities in README
 	Unicode encoding in logplot line-plot using matplotlib backend (would crash with encoding problems in some cases)
 	Added sumstat utility/API for generating some common summary statistics for a given histogram-like logfile. See README for examples
+	Added --decode options to urlparse that allows one to url-decode (unquote) input stream
 	
 version 0.6
 	Added --header flag to logparse, will prepend output with field names. useful e.g for dumping to CSV file
